added fun lil button clicker with the onclick function in javascript

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html {
+background-color: azure;}
+
 .button1 {
     border:3px powderblue;
     border-style: dashed;
@@ -44,6 +47,26 @@
 
 }
 .button3:hover {background: rgb(224, 159, 197);
+    -webkit-text-fill-color: white;
+    border-color:white;
+}
+
+.button4 {
+    border:3px rgb(255, 230, 118);
+    bottom:300px;
+    right:200px;
+    position: absolute;
+    border-style: dashed;
+    border-radius: 8%;
+    padding: 8px;
+    background-color: inherit;
+    display: inline-block;
+    font-size:16px;
+    -webkit-text-fill-color: rgb(255, 230, 118);
+    transition: background-color 0.3s, color 0.3s, border 0.3s;
+
+}
+.button4:hover {background: rgb(255, 230, 118);
     -webkit-text-fill-color: white;
     border-color:white;
 }
