--- a/style.css
+++ b/style.css
@@ -132,3 +132,18 @@ background-color: azure;}
     -webkit-text-fill-color: white;
     border-color:white;
 }
+.button9 {
+    border:3px rgb(0, 59, 13);
+    border-style: dashed;
+    border-radius: 8%;
+    padding: 8px;
+    background-color: inherit;
+    display: inline-block;
+    font-size:16px;
+    -webkit-text-fill-color: rgb(0, 59, 13);
+    transition: background-color 0.3s, color 0.3s, border 0.3s;
+}
+.button9:hover {background: rgb(0, 59, 13);
+    -webkit-text-fill-color: white;
+    border-color:white;
+}
