--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 html {
-background-color: azure;}
+background-color: azure;
+width:100%;
+display:block;
+position: absolute;
+}
 
 .button1 {
     border:3px powderblue;
@@ -57,7 +61,7 @@ background-color: azure;}
 .button4 {
     border:3px rgb(29, 130, 197);
     bottom:300px;
-    right:200px;
+    right:75%;
     position: absolute;
     border-style: dashed;
     border-radius: 8%;
